--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script>
     var myInput = document.getElementById("name");
     if (myInput && myInput.value === "heisenberg") {
+           location.replace("https://illegalradish.github.io/chat/")
       alert("My input has a value!");
     }
    </script>
