--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
            var myInput = document.getElementById("name");
            if (myInput && myInput.value === "heisenberg") {
-                  location.replace("https://illegalradish.github.io/chat/")
+                  location.replace("chat.html")
              alert("My input has a value!");
            }
 
