--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
            var myInput = document.getElementById("name");
            if (myInput && myInput.value === "heisenberg") {
-                  location.replace("chat.html")
+                  location.replace("https://illegalradish.github.io/Chat/")
              alert("My input has a value!");
            }
 
