--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Say my name...</h1>
+<h1>Games</h1>
+       <a href="https://campusdirections.org/">Campus Directions</a>
+       <a href="https://shsgames.github.io/">SHS Games</a>
+       <a href="https://simple-education.xyz/">Extreme Math</a>
+       <a href="https://games.odd.gay/">Odd Games</a>
+       <a href="https://www.coolmathgames.com/">Cool Math Games</a>
+       <a href="https://illegalradish.github.io/sokolDoom/">Doom</a>
+       <a href="https://browncha023.github.io/GBA/">Game Boy Adcanced</a>
 
-<input type="text" id="name" name="name" required
-       minlength="4" size="20">
+<h1>Unblockers</h1>
+       <a href="https://campusdirections.org/">Campus Directions</a>
 
-<p>Hit da </p><p id="demo" onclick="myFunction()">griddy.</p>
 
-<script>
-       function myFunction() {
-              if(document. getElementById("name"). value === "heisenberg")
-              window.location='https://illegalradish.github.io/Chat/'
-              alert("your gawshdawn right");
-       }
-</script>
+
+
 </body>
   
   
