--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
+       <title>Google Slides</title>
+       <link rel="icon" href=""https://media.flaticon.com/dist/min/img/landing/gsuite/slides.svg>
 <h1>Games</h1>
-       <a href="https://campusdirections.org/">Campus Directions</a>
-       <a href="https://shsgames.github.io/">SHS Games</a>
-       <a href="https://simple-education.xyz/">Extreme Math</a>
-       <a href="https://games.odd.gay/">Odd Games</a>
-       <a href="https://www.coolmathgames.com/">Cool Math Games</a>
-       <a href="https://illegalradish.github.io/sokolDoom/">Doom</a>
-       <a href="https://browncha023.github.io/GBA/">Game Boy Adcanced</a>
+       <a href="https://campusdirections.org/">Campus Directions</a> <br>
+       <a href="https://shsgames.github.io/">SHS Games</a> <br>
+       <a href="https://simple-education.xyz/">Extreme Math</a> <br>
+       <a href="https://games.odd.gay/">Odd Games</a> <br>
+       <a href="https://www.coolmathgames.com/">Cool Math Games</a> <br>
+       <a href="https://illegalradish.github.io/sokolDoom/">Doom</a> <br>
+       <a href="https://browncha023.github.io/GBA/">Game Boy Adcanced</a> <br>
 
 <h1>Unblockers</h1>
        <a href="https://campusdirections.org/">Campus Directions</a>
