--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
        <a href="https://www.coolmathgames.com/">Cool Math Games</a> <br>
        <a href="https://illegalradish.github.io/sokolDoom/">Doom</a> <br>
        <a href="https://browncha023.github.io/GBA/">Game Boy Adcanced</a> <br>
+       <a href="https://outred.github.io/">OutRed</a> <br>
 
 <h1>Unblockers</h1>
-       <a href="https://campusdirections.org/">Campus Directions</a>
-
+       <a href="https://campusdirections.org/">Campus Directions</a> <br>
+       <a href="https://outred.github.io/">OutRed</a> <br>
+       <a href="https://orbitalofficial.net/">Orbital</a> <br>
+       <a href="https://elixirofficial.com/">Elixer</a> <br>
 
 
 
