--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <a href="https://orbitalofficial.net/">Orbital</a> <br>
        <a href="https://elixirofficial.com/">Elixer</a> <br>
 
-
+<a href="./play">link text</a>
 
 </body>
   
